[gd_scene load_steps=3 format=3 uid="uid://btn7sb2ek2a1l"]

[ext_resource type="Script" path="res://src/map/level2/space_walk.gd" id="1_e1ifc"]

[sub_resource type="BoxShape3D" id="BoxShape3D_efuhw"]

[node name="space_walk" type="Node3D"]
script = ExtResource("1_e1ifc")

[node name="snd" type="AudioStreamPlayer" parent="."]
bus = &"sfx"

[node name="oxygen_timer" type="Timer" parent="."]
one_shot = true

[node name="asteroid_timer" type="Timer" parent="."]
one_shot = true

[node name="asteroid_indicator_timer" type="Timer" parent="."]

[node name="area3D" type="Area3D" parent="."]

[node name="collisionShape3D" type="CollisionShape3D" parent="area3D"]
shape = SubResource("BoxShape3D_efuhw")

[node name="safe_zone" type="Area3D" parent="."]

[connection signal="timeout" from="oxygen_timer" to="." method="_on_oxygen_timer_timeout"]
[connection signal="timeout" from="asteroid_timer" to="." method="_on_asteroid_timer_timeout"]
[connection signal="timeout" from="asteroid_indicator_timer" to="." method="_on_asteroid_indicator_timer_timeout"]
[connection signal="body_entered" from="area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="body_entered" from="safe_zone" to="." method="_on_safe_zone_body_entered"]
[connection signal="body_exited" from="safe_zone" to="." method="_on_safe_zone_body_exited"]
